# multi_ontology_reference

./: .classpath  .gitignore  CMakeLists.txt  LICENSE  README.MD  build.gradle  catalog-v001.xml  package.xml  settings.gradle
amor/: build.gradle  pom.xml
amor/files/: queriesChart.py  stdQueriesChart.py
amor/files/benchmarks/: LUBM-queries  T-A-box_dep0-uni0.owl  T-box.owl  links
amor/files/doc/: allclasses-frame.html  constant-values.html
amor/files/ontologies/: catalog-v001.xml  ontology_manipulation.owl  ontology_manipulation1.owl  pizza_enquired.owl  test_creation.owl  test_loadFromWeb.owl  test_loadFromWeb_changed.owl
doc/: deprecated-list.html  overview-tree.html
docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
files/benchmarks/: A-box_dep0-uni0.owl  catalog-v001.xml  links
files/benchmarks/LUBM-UOB/: UOBM-Tbox.owl
files/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
files/doc/[intellij] UML diagrams/: aMOR.uml
files/ontologies/: catalog-v001.xml  ontology_manipulation.owl  ontology_manipulation1.owl  ontology_manipulation2.owl  pizza_enquired.owl  test_loadFromFile.owl  test_loadFromWeb.owl  utility.owl
gradle/wrapper/: gradle-wrapper.properties
(+2269 files in other folders)
