<?xml version="1.0"?>
<package>
    <name>multi_ontology_reference</name>
    <version>2.2.0</version>
    <description>The multi_ontology_reference package</description>

    <maintainer email="luca.buoncompagni@edu.unige.it">Buoncompagni Luca</maintainer>
    <author email="luca.buoncompagni@edu.unige.it">Buoncompagni Luca</author>
    <url type="website">https://github.com/EmaroLab</url>
    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosjava_build_tools</build_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
